[MSE][Mac] Return absolute value of error code from CDMSessionMediaSourceAVFObjC::update(). https://bugs.webkit.org/show_bug.cgi?id=139316

Reviewed by Eric Carlson.

Similarly to our asynchronous error reporting, return the absolute value of the error code.

* platform/graphics/avfoundation/objc/CDMSessionMediaSourceAVFObjC.mm:
(WebCore::systemCodeForError):
(WebCore::CDMSessionMediaSourceAVFObjC::update):


Canonical link: https://commits.webkit.org/157173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176879 268f45cc-cd09-0410-ab3c-d52691b4dbfc